k8s/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: family-tree
  labels:
    app: laravel-app
spec:
  type: LoadBalancer
  selector:
    app: laravel-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  sessionAffinity: None
